--- a/formlogin.html
+++ b/formlogin.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <form>
+        <fieldset>
+        <legend>form</legend>
         <tr>
             <td>username</td>
             <td>:</td>
@@ -50,6 +52,7 @@
       <video autoplay width="50">
           <source src="vidio.mp4" >
       </video>
+      </fieldset>
     </form>
     
 </body>
